<resources>
    <string name="app_name">MIL-mail</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="name">name</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="compose">Compose</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="body">Body:</string>
</resources>